src/trusted/validator_arm/testdata/bad/invalid_indirect_branch_mask.valerr

validate: error: Unsafe use of indirect branch instruction:
	       4:	e12fff15 		bx	r5

